feat(console): improvements
